# dokuwiki-autodoc

./: README.md  pyproject.toml  rzdwvz-export.txt
src/dokuwiki_autodoc/: __about__.py  __init__.py  autodoc.py  liquid_filters.py  qviewkit_url_handler.py  unified_measurement_adapter.py
src/dokuwiki_autodoc/templates/: doc_base.txt.liquid  sample.txt.liquid  unified_exp_base.txt.liquid  vna_current_scan.txt.liquid  vna_power_scan.txt.liquid  vna_trace.txt.liquid
tests/: .gitignore  expected-report-RZDWVZ.txt  expected-report-S0Z69N.txt  interaction-test.ipynb  qviewkit_url_test.py  test_auto_documentation.py  test_filters.py  test_templates.py  test_unified_adapter.py
tests/test_data/: .7c57581a89db.breadcrumb
tests/test_data/RZDWVZ_1D_IV_curve/: RZDWVZ_1D_IV_curve.h5  RZDWVZ_1D_IV_curve.measurement  RZDWVZ_1D_IV_curve.set
tests/test_data/S0Z69N_VNA_tracedata/: S0Z69N_VNA_tracedata.h5  S0Z69N_VNA_tracedata.measurement  S0Z69N_VNA_tracedata.set
