[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dokuwiki-autodoc"
dynamic = ["version"]
description = 'Automatically generate documentation in Dokuwiki'
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-2.0-or-later"
keywords = ["dokuwiki", "qkit", ]
authors = [
  { name = "PHI AG Ustinov"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: Jupyter :: JupyterLab :: 3",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v2 (GPLv2)"
]
dependencies = [
  "dokuwiki >= 1.3.3",
  "python-liquid >= 1.10.0",
  "liquid-babel >= 1.0.0",
  "babel",
  "importlib-resources",
  "parsita"
]

[project.scripts]
qviewkit-url = "dokuwiki_autodoc.qviewkit_url_handler:url_handler"

[project.optional-dependencies]
certifi = ["certifi"]

[project.urls]
"Homepage" = "https://github.com/qkitgroup/dokuwiki-autodoc"
"Bug Tracker" = "https://github.com/qkitgroup/dokuwiki-autodoc/issues"

[tool.hatch.version]
path = "src/dokuwiki_autodoc/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
  "pytest-mock"
]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.9", "3.10", "3.11"]

[tool.hatch.envs.lint]
detached = true
dependencies = [
  "black>=23.1.0",
  "mypy>=1.0.0",
  "ruff>=0.0.243",
]
[tool.hatch.envs.lint.scripts]
typing = "mypy --install-types --non-interactive {args:src/dokuwiki_autodoc tests}"
style = [
  "ruff {args:.}",
  "black --check --diff {args:.}",
]
fmt = [
  "black {args:.}",
  "ruff --fix {args:.}",
  "style",
]
all = [
  "style",
  "typing",
]

[tool.black]
target-version = ["py37"]
line-length = 120
skip-string-normalization = true

[tool.ruff]
target-version = "py37"
line-length = 120
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["dokuwiki_autodoc"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["dokuwiki_autodoc", "tests"]
branch = true
parallel = true
omit = [
  "src/dokuwiki_autodoc/__about__.py",
]

[tool.coverage.paths]
dokuwiki_autodoc = ["src/dokuwiki_autodoc", "*/dokuwiki-autodoc/src/dokuwiki_autodoc"]
tests = ["tests", "*/dokuwiki-autodoc/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
